--- a/main.html
+++ b/main.html
@@ -10,6 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form action="post">
+		<div>
+			<label for="name">Enter your name</label>
+			<input type="text" id="name" name="name" maxlength="50" minlength="3" required> 
+		</div>
+
+		<div>
+			<label for=portfolio> Portfolio</label>
+			<input type="url" id="portfolio" name="portfolio" required>
+		</div>
+
+		<div>
+			<label for=favColor> Favorite Color</label>
+			<input type="color" id="favColor" required>
+		</div>
+
+		<div>
+			<label for=likeness> Likeness</label>
+			<input type="range" id="likeness" min="1" max="100" required>
+		</div>		
+	</form>
 
 </body>
 
