--- a/main.html
+++ b/main.html
@@ -10,9 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form action="post">
+	<form action="/submit-form" method="post">
+		<h1>Feedback Form</h1>
 		<div>
-			<label for="name">Enter your name</label>
+			<label for="name">Name</label>
 			<input type="text" id="name" name="name" maxlength="50" minlength="3" required> 
 		</div>
 
